# test_core

./: LedCtrl.c  LedCtrl.h  Makefile  a_to_A  a_to_A.c  bk_dhcpd.conf  char_to_int  char_to_int.c  conf_date  core_app.sh  define_func  define_func.c  dhcp_server_setting  empty_runtime  empty_runtime.c  example.rar  fread  fread.c  ip_netmask.c  ip_range_cal  lan_conf_date  lan_conf_date.c  malloc  malloc.c  mcu_serial.c  merge_error_code  merge_error_code.c  mkfifo  modify_dhcp  new_conf.c  plus_test  plus_test.c  protocol.rar  pthread_exit.c  pthread_rw_file  pthread_rw_file.c  pthread_timer  pthread_timer.c  reset.sh  rx_ttymxc3  (+30 more)
arp/: arp.c
cgi-bin/: cgi-test  cgi-test.c
config/: Makefile  modify_db  modify_db.c  modify_dhcp.c  new_conf.c  read_conf.c  write_conf.c
config/lib/: libconfig.so.11
connect_device/: arm64-eth0_connect_dev  dhcpd.leases  else_if  else_if.c  eth0_connect_device  eth0_connect_device.c  eth0_dev_list  getifaddrs  getifaddrs.c
data_get/: data_get  data_get.c  data_get_arm64
dhcpd_data/: dhcp_server_setting.c  dhcpd.conf
diskinfo/: diskinfo  diskinfo.c
genRandomString/: MacToPassWord  MacToPassWord.c  genRandomString  genRandomString.c
gps/: core-gps_uart-14587-3471760576  gps_parse.c  gps_uart  gps_uart.c  gps_uart_test  time  time.c
head_info/: ADD-version.c  get_system_time  get_system_time.c  head_info.c  read-version.c  read_head  read_head.c  test_read-version.c  upgrade_head  upgrade_head.c
i2c-tools/: ksz9897_i2c_transfer  ksz9897_i2c_transfer.c
ip_info/: .ip_info.c.swp  ip_info  ip_info.c  ip_netmask  mac_to_ipv6.c  netmask_to_len  netmask_to_len.c
ip_route/: get_gw  get_gw.c  ip_addr  ip_addr.c  ip_flush  ip_flush.c  readme.txt
iproute2-4.14.1/: Makefile  config.mk
iproute2-4.14.1/ip/: ipaddress.c
iproute2-4.14.1/lib/: libnetlink.c  ll_map.c  utils.c
ipv6/: ipv6_client  ipv6_client.c  ipv6_server  ipv6_server.c  mac_to_ipv6
ledctrl/: LedCtrl.c  LedCtrl.h  ledCtrl
ledctrl/old/: LedCtrl.c  (+3 more)
msg_queue/: example.c  msg_process.c  msg_process.h  msg_q
mul_timer/: mul_timer.c  mul_timer.h
point_test/: point  point.c
popen/: popen  popen.c
progress_connection/: fifo_connect  fifo_connect.c  seml  seml.c
pthread_mutex/: pthread_mutex  pthread_mutex.c  pthread_signal  pthread_signal.c
rayautoipd.20210104/: Android.mk  CMakeCache.txt  CMakeLists.txt  Makefile  NOTICE  cmake_install.cmake  rayautoipd
rayautoipd.20210104/configs/: rayautoipd.atom.assigned.cfg  rayautoipd.axiom.assigned.cfg  rayautoipd.axiom.unassigned.cfg  rayautoipd.linux.dev-test.cfg  rayautoipd.linux.new-arch-only.cfg  rayautoipd.rds.cfg
rayautoipd.20210104/dhcpcd/: config.h
rayautoipd.20210104/dhcpcd/compat/: posix_spawn.c  posix_spawn.h
rayautoipd.20210104/dhcpcd/src/: arp.c  arp.h  bpf.c  defs.h  dhcp.c  dhcp6.c  dhcpcd-embedded.h  dhcpcd.c  dhcpcd.h  if-linux.c  if-options.c  if-options.h  if.c  ipv4.c  route.c  script.c
rayautoipd.20210104/raymarine/: dhcpcd-embedded.c  ifaddrs.c  ipv4ll-group.c  ipv4ll-group.h
rayautoipd.20210104/tests/: ipv4ll.cfg  raymarine.cfg
select_test/: select  select.c
semaphore/: kill  kill.c  trap.sh
sock_BROADCAST/: 2client.c  2server  2server.c  client  client.c  getip  getip.c  getmac  getmac.c  getmac_arm64  openwrt-client  openwrt-server  server  server.c  x86-client  x86-server
string/: .define_token.c.swp  a.out  int_to_str  int_to_str.c  sscanf  sscanf.c  stat  stat.c  str_arry  str_arry.c  str_one_cmp  str_one_cmp.c  str_to_ascii  str_to_ascii.c  str_to_int  str_to_int.c  stringfind.c  strncmp.c  strncpy.c  strsep  strsep.c  strtok  strtok.c  test  test.c
thread_id/: thread_id  thread_id.c
timer/: timer  timer.c
uart1_test/: .test.c.swp  115200  115200_0x0005  115200_read_stm8_version  115200_resend_200_times  115200_resend_200_times_1s_re_rx  115200_stm8_upgrade_crc  115200_stm8_upgrade_v004_crc  115200_uart_test_ot_resend  115200_upgrade_crc  19200_a000  19200_flash_head_data  19200_stm8_upgrade  19200_stm8_upgrade_crc  9600  9600_resend_200_times_1s_re_rx  cal_checksum.c  cmd_to_stm8  core-uart_io_all_tesSIG11  ksz9897_switch_reset  read_package  read_version  recv_test  stm8_upgrade  stm8_upgrade.c  stm8_upgrade_v0.03  stm8_upgrade_v0.03_crc  stm8_upgrade_v0.04  stm8_upgrade_v0.04_crc  switch_reset  switch_reset.c  test_stm8_upgrade  test_upgrade  uart_io_all_test  uart_io_test  uart_io_test.c  uart_test  uart_test.c  uart_test_19200
upgrade_eth0_connector_example/src/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  update_eth0_connector.c
webs/: Makefile
webs/src/: ChangeLog  Makefile.am  configure.ac  webs.pc.in
webs/src/src/: Makefile.am  balloc.c  default.c  form.c  handler.c  jrd_md5.c  jrd_md5.h  main.c  mime.c  queue.c  queue.h  security.c  sock.c  sockGen.c  sock_clt.c  sock_clt.h  uemf.c  uemf.h  webs.c  webs.h  webs_define.c  webs_define.h  websuemf.c  win_web_api_pro.c  win_web_api_pro.h  wsIntrn.h
(+74 files in other folders)
